<resources>
    <string name="app_name">Smack</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="login_button_text">Login</string>
    <string name="hint_text">message:</string>
    <string name="email_hint_text">email</string>
    <string name="password_hint_text">password</string>
    <string name="no_account_text">Don\'t have an account?</string>
    <string name="sign_up_button_text">sign up here</string>
    <string name="username_hint_text">username</string>
    <string name="generate_new_avatar_text">Tap to generate user avatar</string>
    <string name="generate_background_color_button_text">generate background color</string>
    <string name="create_user_button_text">CREATE USER</string>
    <string name="registration_error_text">Registration failed. Please try again</string>
    <string name="login_error_text">Login failed. Please try again</string>
    <string name="create_user_error_text">Create User failed. Please try again</string>
    <string name="user_validation_text">Please fill username, password and email</string>
    <string name="logout_button_text">Logout</string>
    <string name="user_not_found_text">User not found</string>
    <string name="add_channel_text">Add Channel</string>
    <string name="channel_name_hint_text">channel name</string>
    <string name="channel_description_hint_text">channel description</string>
    <string name="add_button_text">ADD</string>
    <string name="cancel_button_text">CANCEL</string>
    <string name="please_login_text">Please Log in</string>
</resources>
