<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:text="@string/add_channel_text"
        android:textAlignment="center"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/addChannelNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="18dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/channel_name_hint_text"
        android:inputType="textPersonName"
        android:textColor="@android:color/darker_gray" />

    <EditText
        android:id="@+id/addChannelDescriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="18dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/channel_description_hint_text"
        android:inputType="textPersonName"
        android:textColor="@android:color/darker_gray" />
</LinearLayout>